--- a/bno085-i2c/platformio.ini
+++ b/bno085-i2c/platformio.ini
@@ -15,7 +15,8 @@ framework = arduino
 monitor_speed = 115200
 lib_deps = 
 	.\lib\SparkFun_BNO080_Arduino_Library-main.zip
-	.\lib\ESP8266WiFi.zip
-	links2004/WebSockets@^2.3.7
-	me-no-dev/ESP Async WebServer@^1.2.3
-	me-no-dev/AsyncTCP@^1.1.1
+	; .\lib\Adafruit_BNO08x-master.zip
+	; .\lib\ESP8266WiFi.zip
+	; links2004/WebSockets@^2.3.7
+	; me-no-dev/ESP Async WebServer@^1.2.3
+	; me-no-dev/AsyncTCP@^1.1.1
